--- a/src/_includes/partials/contentBlocks.njk
+++ b/src/_includes/partials/contentBlocks.njk
@@ -10,7 +10,7 @@
     {% endif %}
 
     {% if block.type === 'actions' %}
-    <div class="px-4 pt-3 pb-4 rounded bg-blue-50">
+    <div class="px-4 pt-3 pb-4 bg-gray-100 rounded-lg">
       <p class="font-semibold">{{ block.title | safe }}</p>
       <div class="flex flex-wrap items-baseline gap-2 mt-2">
         {% for item in block.data %}
