--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -4,11 +4,11 @@
 
   {% if params.variant %}
     {% if params.variant === "primary" %}
-      {% set variant = "bg-blue-500 text-white" %}
+      {% set variant = "bg-blue-500 text-white border-2 border-blue-500" %}
     {% endif %}
 
     {% if params.variant === "secondary" %}
-      {% set variant = "bg-white text-blue-600" %}
+      {% set variant = "bg-white text-blue-600 border-2 border-blue-500" %}
     {% endif %}
 
     {% if params.variant === "tertiary" %}
