--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -4,11 +4,11 @@
 
   {% if params.variant %}
     {% if params.variant === "primary" %}
-      {% set variant = "bg-blue-500 text-white border-2 border-blue-500" %}
+      {% set variant = "bg-blue-500 text-white border-2 border-blue-500 hover:border-blue-800" %}
     {% endif %}
 
     {% if params.variant === "secondary" %}
-      {% set variant = "bg-white text-blue-600 border-2 border-blue-500" %}
+      {% set variant = "bg-white text-blue-600 border-2 border-white hover:border-blue-600" %}
     {% endif %}
 
     {% if params.variant === "tertiary" %}
@@ -16,7 +16,7 @@
     {% endif %}
   {% endif %}
 
-  <a href="#" class="inline-flex items-center gap-2 px-6 py-2.5 no-underline rounded font-semibold leading-tight text-center justify-center {{ params.class }} {{ variant }}">
+  <a href="#" class="inline-flex items-center gap-2 px-6 py-2.5 no-underline rounded font-semibold leading-tight text-center justify-center {{ params.class }} {{ variant or buttonClasses }}">
     <span>{{ params.text | safe }}</span>
   </a>
 {% endmacro %}
