--- a/src/_includes/partials/contentBlocks.njk
+++ b/src/_includes/partials/contentBlocks.njk
@@ -1,30 +1,27 @@
 {%- from "macros/button.njk" import button -%}
 
-{% if product.contentBlocks %}
-  {% for block in product.contentBlocks %}
+{% for block in product.contentBlocks %}
 
-    {% if block.type === 'markdown' %}
+  {% if block.type === 'markdown' %}
+    {% for item in block.data %}
+      {{ item | markdown | safe }}
+    {% endfor %}
+  {% endif %}
+
+  {% if block.type === 'actions' %}
+  <div class="px-6 pt-5 pb-6 mt-4 mb-12 rounded-lg bg-deepblue-50">
+    <p class="font-semibold">{{ block.title | safe }}</p>
+    <div class="flex flex-col flex-wrap items-baseline gap-2 mt-2 md:flex-row">
       {% for item in block.data %}
-        {{ item | markdown | safe }}
+        {{ button(
+          {
+            text: item.text,
+            variant: item.variant,
+            class: 'flex-1'
+          }
+        ) }}
       {% endfor %}
-    {% endif %}
-
-    {% if block.type === 'actions' %}
-    <div class="px-6 pt-5 pb-6 mt-4 mb-12 rounded-lg bg-deepblue-50">
-      <p class="font-semibold">{{ block.title | safe }}</p>
-      <div class="flex flex-wrap items-baseline gap-2 mt-2">
-        {% for item in block.data %}
-          {{ button(
-            {
-              text: item.text,
-              variant: item.variant
-            }
-          ) }}
-        {% endfor %}
-      </div>
     </div>
-    {% endif %}
-  {% endfor %}
-{% else %}
-  <p>Innhold mangler …</p>
-{% endif %}
+  </div>
+  {% endif %}
+{% endfor %}
