--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -8,7 +8,7 @@
     {% endif %}
 
     {% if params.variant === "secondary" %}
-      {% set variant = "bg-white text-blue-600 border-2 border-white hover:border-blue-600" %}
+      {% set variant = "bg-blue-50 text-blue-600 border-2 border-blue-50 hover:border-blue-600" %}
     {% endif %}
 
     {% if params.variant === "tertiary" %}
