--- a/src/_includes/partials/contentBlocks.njk
+++ b/src/_includes/partials/contentBlocks.njk
@@ -9,19 +9,15 @@
   {% endif %}
 
   {% if block.type === 'actions' %}
-  <div class="px-6 pt-5 pb-6 mt-4 mb-12 rounded-lg bg-deepblue-50">
-    <p class="font-semibold">{{ block.title | safe }}</p>
-    <div class="flex flex-col flex-wrap items-baseline gap-2 mt-2 md:flex-row">
-      {% for item in block.data %}
-        {{ button(
-          {
-            text: item.text,
-            variant: item.variant,
-            class: 'flex-1'
-          }
-        ) }}
-      {% endfor %}
-    </div>
+  <div class="grid gap-2 pb-8 mt-4 mb-6 border-b border-gray-200 sm:flex">
+    {% for item in block.data %}
+      {{ button(
+        {
+          text: item.text,
+          variant: item.variant
+        }
+      ) }}
+    {% endfor %}
   </div>
   {% endif %}
 {% endfor %}
